fixes #1271 to add OpenShift OAuth support if enabled in the configuration

--- a/public/ng/less/gogs/base.less
+++ b/public/ng/less/gogs/base.less
@@ -224,6 +224,12 @@ clear: both;
             background-color: #3cb3ff;
         }
     }
+    .openshift {
+        background-color: #db212f;
+        &:hover {
+            background-color: #b21b27;
+        }
+    }
 }
 .main-wrapper {
     padding: 20px 0 40px;
